# 2023-BJTU-DBMS-Project

./: .gitignore  5.15Todo.md  FinalDemonstration.html  FinalDemonstration.md  LICENSE.txt  README.md  sql test.md
.VSCodeCounter/2023-04-21_00-00-19/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
cmd/: Build.ps1  CMakeLists.txt  README.md  index.colasql  indexSimplified.colasql  main.cpp  script.colasql  student.colasql
cmd/data/: databases.txt
cmd/data/bjtu/: student.txt  studentRecords.txt
cmd/include/: command_processor.h  header_template.h  my_parser.h
cmd/src/: command_processor.cpp  main.cpp  my_parser.cpp  my_parser.cpp.backup
cmd/test/: CREATE TABLE 测试语句.txt  测试语句.md
core/: CMakeLists.txt  README.md  main.cpp
core/include/: colasqltool.h  constants.h  database.h  dataprocessor.h  table.h  user.h
core/include/constraint/: all_constraints.h  constraint.h  default_constraint.h  foreign_key_constraint.h  foreign_refered_constraint.h  not_null_constraint.h  primary_key_constraint.h  unique_constraint.h
core/include/index/: fhqtreapindex.h  index.h
core/src/: colasqltool.cpp  database.cpp  dataprocessor.cpp  table.cpp  user.cpp
core/src/constraint/: CMakeLists.txt  constraint.cpp  constraint_test.cpp.txt  default_constraint.cpp  foreign_key_constraint.cpp  foreign_refered_constraint.cpp  not_null_constraint.cpp  primary_key_constraint.cpp  unique_constraint.cpp
core/src/index/: fhqtreapindex.cpp  index.cpp
document/: FinalDemonstration.md  FinalDocument.md  TechnicalProposal.md  sql test.md
file/: README.md
file/include/: filemanager.h
file/src/: filemanager.cpp
gui/: README.md
gui/ColaSqlGui/: .gitignore  ColaSqlGui.pro  Colasql.icon  columndialog.cpp  columndialog.h  createindex.h  createindex.ui  createrecord.cpp  createrecord.h  createrecord.ui  createtable.cpp  createtable.h  createtable.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  qtbstreambuf.h  ui_login.cpp  ui_login.h  ui_login.ui  ui_register.cpp  ui_register.h  ui_register.ui
gui/ColaSqlGui/data/: databases.txt  users.txt
gui/ColaSqlGui/data/bjtu/: studentConstraints.txt  studentRecords.txt  tables.txt
gui/ColaSqlGui/include/: columndialog.h  createindex.h  createrecord.h  createtable.h  mainwindow.h  qtbstreambuf.h  ui_login.h  ui_register.h
gui/ColaSqlGui/resource/: res.qrc
gui/ColaSqlGui/src/: columndialog.cpp  createindex.cpp  createrecord.cpp  createtable.cpp  main.cpp  mainwindow.cpp  ui_login.cpp  ui_register.cpp
gui/ColaSqlGui/ui/: createindex.ui  createrecord.ui  createtable.ui  mainwindow.ui  secondarywindow.ui  ui_login.ui  ui_register.ui
gui/DBMSgui/ColaSqlGui/: ColaSqlGui.pro  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  ui_login.cpp  ui_register.cpp  ui_register.ui
gui/DBMSgui/build-ColaSqlGui-Desktop_Qt_5_12_12_MSVC2017_32bit-Debug/: .qmake.stash  Makefile  Makefile.Debug  Makefile.Release  ui_mainwindow.h  ui_ui_login.h
gui/DBMSgui/build-ColaSqlGui-Desktop_Qt_5_12_12_MSVC2017_32bit-Debug/debug/: ColaSqlGui.ilk  moc_mainwindow.cpp  moc_predefs.h  moc_ui_register.cpp
gui/DBMSgui/build-ColaSqlGui-Desktop_Qt_5_12_12_MinGW_64_bit-Debug/: .qmake.stash  Makefile  Makefile.Debug  Makefile.Release  object_script.ColaSqlGui.Debug  object_script.ColaSqlGui.Release  ui_mainwindow.h
gui/DBMSgui/build-ColaSqlGui-Desktop_Qt_5_12_12_MinGW_64_bit-Debug/debug/: moc_columndialog.cpp  moc_mainwindow.cpp  moc_predefs.h  moc_ui_login.cpp  moc_ui_register.cpp
gui/build-ColaSqlGui-Desktop_Qt_5_12_12_MinGW_64_bit-Debug/: Makefile  Makefile.Debug  Makefile.Release  object_script.ColaSqlGui.Debug  object_script.ColaSqlGui.Release  ui_ui_register.h
gui/build-ColaSqlGui-Desktop_Qt_5_12_12_MinGW_64_bit-Debug/debug/: moc_columndialog.cpp  moc_ui_login.cpp
